fix z-index of header

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   position: fixed;
+  z-index: 999;
   display: flex;
   height: $header-height;
 
